--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ header {
 body {
     height: 100vh;
     width: 100vw;
-    padding: 0 4.5rem;
+    padding: 0 8.5rem;
     background-color: #f3f3f3;
 }
 
@@ -235,9 +235,20 @@ header .sticky-nav li {
 
 /* MAIN STARTS HERE */
 
+main {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
 /* HERO SECTION STARTS HERE */
 #hero {
     width: 100%;
+    padding: 2rem 4.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #hero-image {
@@ -257,4 +268,116 @@ header .sticky-nav li {
     font-size: 6rem;
     font-weight: 500;
     color: var(--red);
+}
+
+#hero-text {
+    left: 50%;
+    right: 50%;
+    width: 50rem;
+    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
+#hero-text span {
+    color: var(--navy-blue);
+}
+
+p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    font-weight: 400;
+}
+
+#photos1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+    position: relative;
+    padding: 4rem 4.5rem;
+}
+
+#yellow-square {
+    position: absolute;
+    width: 60%;
+    height: 100%;
+    background-color: var(--yellow);
+    right: 0;
+}
+
+#photos1 .photo1 {
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-image: url(https://ableton-production.imgix.net/about/photo-1.jpg?dpr=2&fit=crop&h=667&ixjsv=1.1.3&q=50&w=667);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+}
+
+#photos1 .photo2 {
+    aspect-ratio: 4/3;
+    height: 25rem;
+    background-image: url(https://ableton-production.imgix.net/about/photo-2.jpg?dpr=2&fit=crop&h=400&ixjsv=1.1.3&q=50&w=533);
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+}
+
+#vision {
+    left: 50%;
+    right: 50%;
+    width: 50rem;
+    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    max-width: max-content;
+    align-self: center;
+    margin-top: 4rem;
+}
+
+#why-abelton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 4rem 0;
+}
+
+#why-abelton img {
+    width: 50%;
+}
+
+#play-circle {
+    height: 4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#we-are {
+    left: 50%;
+    right: 50%;
+    width: 50rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    max-width: max-content;
+    align-self: center;
+    margin: 4rem 0;
 }
